Website ueberarbeitet. Neue Sektion fuer Mentoren, den Anmeldprozess auf der Webseite deutlicher gemacht

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                 <li>
                     <a class="page-scroll" href="#about">Info</a>
                 </li>
+
+                <li>
+                    <a class="page-scroll" href="#join">Teilnehmen</a>
+                </li>
+
                 <li>
                     <a class="page-scroll" href="#events">Termine</a>
                 </li>
@@ -89,10 +94,7 @@
                     <a class="page-scroll" href="#faq">Fragen</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#join">Mitmachen</a>
-                </li>
-                <li>
-                    <a class="" href="raetsel.html">Rätsel</a>
+                    <a class="" href="mentoren.html">Mentoren</a>
                 </li>
                 <li class="visible-xs">
                     <a href="/material.html">Material</a>
@@ -140,7 +142,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td><a href="#events" style="font-size: 1.2em">22. April</a></td>
+                    <td><a href="#events" style="font-size: 1.2em">20. Mai</a></td>
                 </tr>
                 <!--
                 <tr>
@@ -192,7 +194,8 @@
                 <p>Programmieren zu können ist eine Fähigkeit, die heutzutage immer wichtiger wird. Wie bei vielen
                     Fähigkeiten gilt auch hier: je früher mit dem Erlernen begonnen wird, desto besser. Leider ist das
                     Programmieren noch kein fester Bestandteil im Schulalltag der Kinder. Dadurch entstand unsere
-                    Vision, ein CoderDojo in Karlsruhe einzurichten, um interessierten Kindern die Möglichkeit zu bieten,
+                    Vision, ein CoderDojo in Karlsruhe einzurichten, um interessierten Kindern die Möglichkeit zu
+                    bieten,
                     programmieren zu lernen und sie in diesem Bereich zu fördern. </p>
                 <a href="img/codo/bild_1.jpg" data-lightbox="codo-bilder"
                    data-title="Mit zweiter Tastatur gehts besser!">
@@ -211,13 +214,77 @@
     </div>
 </section>
 
+
+<!-- Join Section -->
+<section id="join" class="content-section text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Wie mache ich mit?</h2>
+
+
+                <a href="img/codo/bild_2.jpg" data-lightbox="codo-bilder" data-title="Spaß mit Scratch">
+                    <img class="img-thumbnail" src="img/codo/bild_2.jpg" alt=""/>
+                </a>
+
+                <p>
+                    Die verfügbaren Plätze in jedem Dojo sind begrenzt und für regelmäßige Teilnehmer gilt, wer sich zu
+                    erst anmeldet, bekommt einen Platz. Neuanmeldungen können zur Zeit nur begrenzt angenommen werden
+                    und sollten deshalb mindestens eine Woche vor dem CoderDojo bei uns eingehen.
+
+                </p>
+
+
+                <p>Jeder, der teilnehmen will, muss sich vorher bei uns per Mail unter
+                    <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a> anmelden.
+
+                    <br>
+                    Bei der Erstanmeldung sollten in der Anmeldung folgende Dinge stehen:
+                </p>
+                <ul style="text-align: left">
+                    <li>Wie alt bist du?</li>
+                    <li>Was für Vorkentnisse bringst du mit?</li>
+                    <li>Bringst du einen eigenen Laptop mit?</li>
+                    <li>Was für Vorkentnisse bringst du mit?</li>
+                    <li>Was würdest du gerne im CoderDojo lernen?</li>
+                </ul>
+
+
+                <p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet
+                    werden.
+                    Eltern älterer Kinder können aber auch gerne bleiben und das Dojo aktiv mitgestalten.</p>
+
+                <p>Die Teilnehmer sollten einen eigenen Laptop mitbringen. Ist dies nicht möglich, kann in
+                    Ausnahmefällen
+                    eine Lösung gefunden werden, sofern wir schon in der Anmeldungsmail Bescheid bekommen.</p>
+
+                <p>Außerdem müssen bei der ersten Teilnahme die <a
+                        href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a>
+                    ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
+
+
+                <p>
+                    Ab der zweiten Teilnahme musst du dich über das CoderDojo-Zen Portal für die einzelnen Treffen
+                    anmelden. Eine Anleitung zur Verwendung von Zen ist <a
+                        href="https://github.com/coderdojoka/Materialien/raw/master/Zen_Anmeldung/zen_anmeldung.pdf">hier</a>
+                    zufinden.
+
+                </p>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <!-- Events Section -->
 <section id="events" class="content-section text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
-                <p>Das nächste Treffen findet am Freitag, dem 22.04.2016 von 17.00 Uhr bis 19:00 Uhr im
+
+                <p>Das nächste Treffen findet am Freitag, dem 20.05.2016 von 17.00 Uhr bis 19:00 Uhr im
                     Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -229,39 +296,44 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">24</span>
-                                <span class="timeline-balloon-date-month">MÄR</span>
+                                <span class="timeline-balloon-date-day">22</span>
+                                <span class="timeline-balloon-date-month">APR</span>
                             </div>
                         </a>
 
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
-                            - 19:00
+                        <div class="col-sm-6 timeline-item timeline-item-first">
+                            <span class="question">Wo?</span>
+                            <a href="#map" class="page-scroll">Seminarraum 236</a>
+
+
+                        </div>
+
+                        <div class="col-sm-6 timeline-item timeline-item-last">
+                            <span class="question">Wann?</span>17:00 - 19:00
                         </div>
                     </div>
 
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">08</span>
-                                <span class="timeline-balloon-date-month">APR</span>
+                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-month">MAI</span>
 
                             </div>
                         </a>
 
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
-                            - 19:00
+                        <div class="col-sm-6 timeline-item timeline-item-first">
+                            <span class="question">Wo?</span>
+                            <a href="#map" class="page-scroll">Seminarraum 236</a>
+                            <br>
+                            <a href="#join" class="join_data">Einstiegstermin</a>
+                        </div>
+                        <div class="col-sm-6 timeline-item timeline-item-last">
+                            <span class="question">Wann?</span>17:00 - 19:00
                         </div>
                     </div>
-					
-					<div class="row timeline-movement">
+
+                    <div class="row timeline-movement">
                         <div class="timeline-badge timeline-filter-movement">
                             <span class="glyphicon glyphicon-time"></span>
                         </div>
@@ -270,36 +342,40 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">22</span>
-                                <span class="timeline-balloon-date-month">APR</span>
+                                <span class="timeline-balloon-date-day">20</span>
+                                <span class="timeline-balloon-date-month">MAI</span>
                             </div>
                         </a>
 
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-first">
+                            <span class="question">Wo?</span>
+                            <a href="#map" class="page-scroll">Seminarraum 236</a>
+
+                        </div>
                         <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
                             - 19:00
                         </div>
                     </div>
 
 
-					
-					<div class="row timeline-movement">
+                    <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">06</span>
-                                <span class="timeline-balloon-date-month">MAI</span>
+                                <span class="timeline-balloon-date-day">03</span>
+                                <span class="timeline-balloon-date-month">JUNI</span>
                             </div>
                         </a>
 
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
-                            - 19:00
+                        <div class="col-sm-6 timeline-item timeline-item-first">
+                            <span class="question">Wo?</span>
+                            <a href="#map" class="page-scroll">Seminarraum 236</a>
+                            <br>
+                            <a href="#join" class="join_data">Einstiegstermin</a>
+
+                        </div>
+                        <div class="col-sm-6 timeline-item timeline-item-last">
+                            <span class="question">Wann?</span>17:00 - 19:00
+
                         </div>
                     </div>
 
@@ -309,6 +385,12 @@
                         </div>
                     </div>
                 </div>
+
+
+                <a href="img/codo/bild_3.jpg" data-lightbox="codo-bilder" data-title="Konzentriert am Arbeiten :)">
+                    <img class="img-thumbnail" src="img/codo/bild_3.jpg" alt=""/>
+                </a>
+
             </div>
         </div>
     </div>
@@ -334,7 +416,8 @@
 
                 <h2>Kann mein Kind jederzeit dazu kommen, oder muss ich bis zum nächsten Durchgang warten?</h2>
 
-                <p>Der Einstieg ist jederzeit möglich. Wir bieten immer Materialien für Anfänger und Fortgeschrittene an.
+                <p>Der Einstieg ist nur einmal im Monat möglich. Die entsprechenden Dojo sind in den aufgeführten
+                    Terminen markiert.
                 </p>
 
                 <h2>Muss mein Kind schon programmieren können?</h2>
@@ -347,18 +430,20 @@
 
                 <h2>Was muss mein Kind sonst können?</h2>
 
-                <p>Es ist einfacher, wenn Ihr Kind schon mal einen Computer bedient hat – aber auch das können wir schnell
-                    nachholen.</p>
+                <p>Ihr Kind sollte den grundlegenden Umgang mit Computern beherschen. Es sollte z.B. selbständig neue
+                    Dateien und Ordner erstellen und eine Suchanfrage im Internet durchführen können.</p>
 
                 <h2>Was muss mein Kind mitbringen?</h2>
 
-                <p>Es wäre super, wenn Ihr Kind einen Laptop mitbringen könnte. Wenn das nicht möglich ist, sagen Sie uns
+                <p>Es wäre super, wenn Ihr Kind einen Laptop mitbringen könnte. Wenn das nicht möglich ist, sagen Sie
+                    uns
                     bitte bei der Anmeldung unbedingt Bescheid – wir versuchen dann ein Laptop zur Verfügung zu
                     stellen.</p>
 
                 <h2>Was für eine Art Laptop braucht mein Kind?</h2>
 
-                <p> Das Laptop muss nicht neu oder besonders schnell sein. Smartphones, Android-Tablets oder iPads sind allerdings nicht
+                <p> Das Laptop muss nicht neu oder besonders schnell sein. Smartphones, Android-Tablets oder iPads sind
+                    allerdings nicht
                     zum
                     Programmieren geeignet.</p>
 
@@ -374,53 +459,6 @@
                     den Kindern, sind offen für ihre Vorschläge und möchten wissen, was sie schon immer mal am Computer
                     selbst ausprobieren wollten. Unsere Mentoren haben ganz unterschiedliche Schwerpunkte und so
                     können wir viele verschiedene Projekte begleiten.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Join Section -->
-<section id="join" class="content-section text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Wie mache ich mit?</h2>
-
-
-                <a href="img/codo/bild_2.jpg" data-lightbox="codo-bilder" data-title="Spaß mit Scratch">
-                    <img class="img-thumbnail" src="img/codo/bild_2.jpg" alt=""/>
-                </a>
-
-
-                <p>Um uns die Planung der Treffen zu erleichtern, sollte sich jeder, der teilnehmen will, vorher bei uns
-                    per Mail unter
-                    <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a> anmelden. Wenn ihr
-                    das erste Mal kommt, ist es
-                    auch gut für uns vorher zu wissen, wie alt ihr seid und was für Vorkentnisse ihr mitbringt.</p>
-
-                <p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet
-                    werden.
-                    Eltern älterer Kinder können aber auch gerne bleiben und das Dojo aktiv mitgestalten.</p>
-
-                <p>Die Teilnehmer sollten einen eigenen Laptop mitbringen. Ist dies nicht möglich, kann in
-                    Ausnahmefällen
-                    eine Lösung gefunden werden, sofern wir schon in der Anmeldungsmail Bescheid bekommen.</p>
-
-                <p>Außerdem müssen bei der ersten Teilnahme die <a
-                        href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a>
-                    ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
-                <br>
-
-                <h2>Wie werde ich Mentor?</h2>
-
-                <p>Wir sind auf der Suche nach weiteren Mentoren. Falls ihr Interesse habt als Mentor beim
-                    CoderDojo Karlsruhe mitzumachen,
-                    schreibt uns einfach eine <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a>.</p>
-
-                <a href="img/codo/bild_3.jpg" data-lightbox="codo-bilder" data-title="Konzentriert am Arbeiten :)">
-                    <img class="img-thumbnail" src="img/codo/bild_3.jpg" alt=""/>
-                </a>
-
             </div>
         </div>
     </div>
@@ -476,14 +514,15 @@
             <div class="col-lg-4">
                 <a href="https://www.inovex.de/"><img src="img/inovex.png" alt="Inovex" style="height: 150px;"></a>
             </div>
-			
-			<br />
-			
-			<h2>Kooperationspartner</h2>
-			<div class="col-lg-4 col-lg-offset-4">
-                <a href="http://www.it-for-kids.org/"><img src="img/IT4KidsLogo2.png" alt="IT4Kids" style="height: auto; max-height: 110px; max-width: 100%"></a>
-			</div>
-		</div>
+
+            <br/>
+
+            <h2>Kooperationspartner</h2>
+            <div class="col-lg-4 col-lg-offset-4">
+                <a href="http://www.it-for-kids.org/"><img src="img/IT4KidsLogo2.png" alt="IT4Kids"
+                                                           style="height: auto; max-height: 110px; max-width: 100%"></a>
+            </div>
+        </div>
     </div>
 </section>
 
