Mentoren seiter aktualiseriert, mit bildern.

--- a/mentoren.html
+++ b/mentoren.html
@@ -94,6 +94,182 @@
     <!-- /.container -->
 </nav>
 
+
+<section id="mentors" class="content-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+
+                <h2>Unsere Mentoren</h2>
+
+                <p>
+                    <img class="img-responsive" src="img/mentoren/gruppe.jpg">
+                </p>
+
+                <h3>Organisation</h3>
+
+                <div class="container-fluid">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="row">
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/ricarda.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Ricarda Trumpf</h4>
+                                <ul>
+                                    <li>CoderDojo Champion</li>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Physik
+                                    </li>
+                                    <li>Power-Scratcherin</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="visible-xs-block" style="height: 50px"></div>
+                    <div class="col-sm-5">
+                        <div class="row">
+
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/mark.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Mark Weinreuter</h4>
+                                <ul>
+                                    <li>Co-Champion</li>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Informatik
+                                    </li>
+                                    <li>
+                                        Lieblingssprache: Python
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h3 style="margin-top: 50px">Unsere Mentoren</h3>
+
+                <div class="container-fluid">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="row">
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/tim.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Tim</h4>
+                                <ul>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Physik
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="visible-xs-block vspacer"></div>
+                    <div class="col-sm-5">
+                        <div class="row">
+
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/rafael.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Rafael</h4>
+                                <ul>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Informatik
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="visible-xs-block vspacer"></div>
+
+
+                <div class="container-fluid">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="row">
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/lennart_he.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Lennart</h4>
+                                <ul>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Informatik
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="visible-xs-block" style="height: 50px"></div>
+                    <div class="col-sm-5">
+                        <div class="row">
+
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/karsten.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Karsten</h4>
+                                <ul>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Informatik
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="visible-xs-block" style="height: 50px"></div>
+
+                <div class="container-fluid">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="row">
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/max.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Max</h4>
+                                <ul>
+                                    <li>
+                                        <span class="occupation">Studiengang:</span> Elektrotechnik
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="visible-xs-block vspacer"></div>
+                    <div class="col-sm-5">
+                        <div class="row">
+
+                            <div class="col-400-2 text-center">
+                                <img src="img/mentoren/lennart_so.jpg">
+                            </div>
+                            <div class="col-400-2">
+                                <h4>Lennart</h4>
+                                <ul>
+                                    <li>
+                                        <span class="occupation">Webdeveloper</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="vspacer"></div>
+
+
+            </div>
+        </div>
+    </div>
+
+</section>
+
+
 <section id="join" class="content-section">
     <div class="container">
         <div class="row">
@@ -104,14 +280,16 @@
                     Du hast Spaß am Programmieren und würdest gerne anderen dabei helfen
                     Programmieren zu lernen? Dann bist du bei uns genau richtig!
                     <br>
-                    Wir sind immer auf der Suche nach ehrenamtlichen Mentoren, die uns dabei helfen das Dojo zu gestalten.
-                    Wenn ihr Interesse habt, schreibt uns einfach eine Mail an <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a>.
+                    Wir sind immer auf der Suche nach ehrenamtlichen Mentoren, die uns dabei helfen das Dojo zu
+                    gestalten.
+                    Wenn ihr Interesse habt, schreibt uns einfach eine Mail an <a
+                        href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a>.
                 </p>
                 <h2>Was muss ich als Mentor können?</h2>
                 <p>
                     Du solltest gut mit Kindern umgehen können und kannst programmieren oder bist einfach nur von
                     Technik begeistert. Die meisten unserer
-                    Teilnehmer sind Anfänger und es reicht vollkommen aus wenn man die Grundlagen beherrscht, um den
+                    Teilnehmer sind Anfänger und es reicht vollkommen aus die Grundlagen zu beherrschen, um den
                     Teilnehmern einen Schritt voraus zu sein :)
                     Die haupsächlich im CoderDojo verwendeten Sprachen sind Python und Scratch. Beide sind sehr einfach
                     zu lernen und deshalb besonders gut zum Einstieg geeignet.
