--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td><a href="#events" style="font-size: 1.2em">20. Mai</a></td>
+                    <td><a href="#events" style="font-size: 1.2em">3. Juni</a></td>
                 </tr>
                 <!--
                 <tr>
@@ -284,7 +284,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen findet am Freitag, dem 20.05.2016 von 17.00 Uhr bis 19:00 Uhr im
+                <p>Das nächste Treffen findet am Freitag, dem 03.06.2016 von 17.00 Uhr bis 19:00 Uhr im
                     Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
