--- a/mentoren.html
+++ b/mentoren.html
@@ -121,7 +121,7 @@
                                     <li>
                                         <span class="occupation">Studiengang:</span> Physik
                                     </li>
-                                    <li>Power-Scratcherin</li>
+                                    <li>Lieblingssprache: Scratch, Python</li>
                                 </ul>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                                 <h4>Lennart</h4>
                                 <ul>
                                     <li>
-                                        <span class="occupation">Webdeveloper</span>
+                                        <span class="occupation">Fachinformatiker - Anwendungsentwicklung</span>
                                     </li>
                                 </ul>
                             </div>
