--- a/index.html
+++ b/index.html
@@ -164,7 +164,21 @@
 
 
         <div>
-            <table id="news_container">
+          
+
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="brand-heading">CoderDojo</h1>
+
+                <h2 class="brand-heading">Karlsruhe</h2>
+
+                <p class="intro-text">Herzlich willkommen auf der Webseite des CoderDojo Karlsruhe!
+                    Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
+                <a href="#about" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated"></i>
+                </a>
+            </div>
+
+  <table id="news_container">
                 <tr>
                     <td>
                         <div class="triangle_box">
@@ -172,7 +186,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td><a href="#events" style="font-size: 1.2em">3. Juni</a></td>
+                    <td><a href="#events" style="font-size: 1.2em">17. Juni</a></td>
                 </tr>
                 <tr>
                     <td>
@@ -205,17 +219,7 @@
                 -->
             </table>
 
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="brand-heading">CoderDojo</h1>
 
-                <h2 class="brand-heading">Karlsruhe</h2>
-
-                <p class="intro-text">Herzlich willkommen auf der Webseite des CoderDojo Karlsruhe!
-                    Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
-                <a href="#about" class="btn btn-circle page-scroll">
-                    <i class="fa fa-angle-double-down animated"></i>
-                </a>
-            </div>
         </div>
     </div>
 
@@ -332,7 +336,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen findet am Freitag, dem 03.06.2016 von 17.00 Uhr bis 19:00 Uhr im
+                <p>Das nächste Treffen findet am Freitag, dem 17.06.2016 von 17.00 Uhr bis 19:00 Uhr im
                     Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -344,8 +348,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">22</span>
-                                <span class="timeline-balloon-date-month">APR</span>
+                                <span class="timeline-balloon-date-day">20</span>
+                                <span class="timeline-balloon-date-month">MAI</span>
                             </div>
                         </a>
 
@@ -364,8 +368,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">06</span>
-                                <span class="timeline-balloon-date-month">MAI</span>
+                                <span class="timeline-balloon-date-day">03</span>
+                                <span class="timeline-balloon-date-month">JUNI</span>
 
                             </div>
                         </a>
@@ -390,8 +394,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">20</span>
-                                <span class="timeline-balloon-date-month">MAI</span>
+                                <span class="timeline-balloon-date-day">17</span>
+                                <span class="timeline-balloon-date-month">JUNI</span>
                             </div>
                         </a>
 
@@ -409,14 +413,14 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">03</span>
-                                <span class="timeline-balloon-date-month">JUNI</span>
+                                <span class="timeline-balloon-date-day">01</span>
+                                <span class="timeline-balloon-date-month">JULI</span>
                             </div>
                         </a>
 
                         <div class="col-sm-6 timeline-item timeline-item-first">
                             <span class="question">Wo?</span>
-                            <a href="#map" class="page-scroll">Seminarraum 236</a>
+                            <a href="#map" class="page-scroll">Ausnahme: Seminarraum 301!</a>
                             <br>
                             <a href="#join" class="join_data">Einstiegstermin</a>
 
