Naechsten Termin aktualisieren

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td><a href="#events" style="font-size: 1.2em">15. Juli</a></td>
+                    <td><a href="#events" style="font-size: 1.2em">29. Juli</a></td>
                 </tr>
                 <tr>
                     <td>
@@ -334,7 +334,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen findet am Freitag, dem 15.07.2016 von 17.00 Uhr bis 19:00 Uhr im
+                <p>Das nächste Treffen findet am Freitag, dem 29.07.2016 von 17.00 Uhr bis 19:00 Uhr im
                     Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -343,6 +343,7 @@
 
                 <div id="timeline">
 
+                    <!-- Dojo Event -->
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
@@ -350,28 +351,25 @@
                                 <span class="timeline-balloon-date-month">JUNI</span>
                             </div>
                         </a>
-
                         <div class="col-sm-6 timeline-item timeline-item-first">
                             <span class="question">Wo?</span>
                             <a href="#map" class="page-scroll">Seminarraum 236</a>
                             <br>
                             <a href="#join" class="join_data">Einstiegstermin</a>
                         </div>
-
                         <div class="col-sm-6 timeline-item timeline-item-last">
                             <span class="question">Wann?</span>17:00 - 19:00
                         </div>
                     </div>
 
+                    <!-- Dojo Event -->
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
                                 <span class="timeline-balloon-date-day">17</span>
                                 <span class="timeline-balloon-date-month">JUNI</span>
-
                             </div>
                         </a>
-
                         <div class="col-sm-6 timeline-item timeline-item-first">
                             <span class="question">Wo?</span>
                             <a href="#map" class="page-scroll">Seminarraum 236</a>
@@ -381,6 +379,7 @@
                         </div>
                     </div>
 
+                    <!-- Dojo Event -->
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
@@ -388,7 +387,6 @@
                                 <span class="timeline-balloon-date-month">JULI</span>
                             </div>
                         </a>
-
                         <div class="col-sm-6 timeline-item timeline-item-first">
                             <span class="question">Wo?</span>
                             <a href="#map" class="page-scroll">Ausnahme: Seminarraum 301!</a>
@@ -400,12 +398,7 @@
                         </div>
                     </div>
 
-                    <div class="row timeline-movement">
-                        <div class="timeline-badge timeline-filter-movement">
-                            <span class="glyphicon glyphicon-time"></span>
-                        </div>
-                    </div>
-
+                    <!-- Dojo Event -->
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
@@ -413,23 +406,46 @@
                                 <span class="timeline-balloon-date-month">JULI</span>
                             </div>
                         </a>
-
                         <div class="col-sm-6 timeline-item timeline-item-first">
                             <span class="question">Wo?</span>
                             <a href="#map" class="page-scroll">Seminarraum 236</a>
-
                         </div>
                         <div class="col-sm-6 timeline-item timeline-item-last">
                             <span class="question">Wann?</span>17:00 - 19:00
-
                         </div>
                     </div>
 
+                    <!-- Clock Sign -->
+                    <div class="row timeline-movement">
+                        <div class="timeline-badge timeline-filter-movement">
+                            <span class="glyphicon glyphicon-time"></span>
+                        </div>
+                    </div>
+
+                    <!-- Dojo Event -->
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">29</span>
+                                <span class="timeline-balloon-date-month">JULI</span>
+                            </div>
+                        </a>
+                        <div class="col-sm-6 timeline-item timeline-item-first">
+                            <span class="question">Wo?</span>
+                            <a href="#map" class="page-scroll">Seminarraum 236</a>
+                        </div>
+                        <div class="col-sm-6 timeline-item timeline-item-last">
+                            <span class="question">Wann?</span>17:00 - 19:00
+                        </div>
+                    </div>
+
+                    <!-- Plus Sign -->
                     <div class="row timeline-row-future">
                         <div class="timeline-badge timeline-future-movement">
                             <span class="glyphicon glyphicon-plus"></span>
                         </div>
                     </div>
+
                 </div>
 
 
