Seitenikon zu den Bildern einordnen

--- a/material.html
+++ b/material.html
@@ -14,7 +14,7 @@
     <title>CoderDojo Karlsruhe - Material</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
