Dokumente in eigenen Unterordner setzen

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     eine Lösung gefunden werden, sofern wir schon in der Anmeldungsmail Bescheid bekommen.</p>
 
                 <p>Außerdem müssen bei der ersten Teilnahme die <a
-                        href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a>
+                        href="doc/Teilnahmebedingungen.pdf">Teilnahmebedingungen</a>
                     ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
 
 
