--- a/material_theme.html
+++ b/material_theme.html
@@ -11,26 +11,36 @@
 
 <section class="content_section">
     <h3>Du kannst schon</h3>
+    <div class="content_sub_section">
 
-    <ul>
-        <li>Bubbberfisch</li>
-        <li>Fischstäbchen</li>
-    </ul>
-
+        <ul>
+            <li>Bubbberfisch</li>
+            <li>Fischstäbchen</li>
+        </ul>
+    </div>
     <h3>Hier lernst du</h3>
+    <div class="content_sub_section">
 
-    <ul>
-        <li>Text einlesen mittels <code>input(..)</code></li>
-        <li>Fischstäbchen</li>
-    </ul>
+        <ul>
+            <li>Text einlesen mittels <code>input(..)</code></li>
+            <li>Fischstäbchen</li>
+        </ul>
 
+    <pre>
+        <code>
+i = 0
+print(i)
+for i in range(1, 20)
+    print(i)
+print("Test")
+        </code>
+    </pre>
+    </div>
+    <h2>Deine Aufgabe</h2>
+    <div class="content_sub_section">
+        sdjfsadfk jsdkjflf
+    </div>
 </section>
-
-<h2>Deine Aufgabe</h2>
-<section class="content_section">
-    sdjfsadfk jsdkjflf
-</section>
-
 
 </body>
 </html>
