--- a/material_viewer.html
+++ b/material_viewer.html
@@ -2,29 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Materialen</title>
 </head>
 <body>
 
 
 <script>
-
     function parse(val) {
-        var result = "Not found",
-                tmp = [];
-        location.search
-                .substr(1)
-                .split("&")
-                .forEach(function (item) {
-                    tmp = item.split("=");
-                    if (tmp[0] === val) result = decodeURIComponent(tmp[1]);
-                });
+        var result = "Not found", tmp = [];
+        location.search.substr(1).split("&").forEach(function (item) {
+            tmp = item.split("=");
+            if (tmp[0] === val) result = decodeURIComponent(tmp[1]);
+        });
         return result;
     }
 
-    console.log(parse('uri'));
+
+    $(function () {
+        var $viewer = $('#viewer');
+        var uri = parse('uri');
+
+        if(uri != null){
+            $.get()
+        }else{
+
+        }
+        console.log(uri);
+    });
 
 </script>
+
+<div id="viewer">
+
+</div>
+
 
 </body>
 </html>
